# sosaku

./: Cargo.toml
sosaku-py/: pyproject.toml  sosaku.pyi
sosaku-py/src/py_types/: var.rs
sosaku-py/tests/: test_exp.py
sosaku/src/: parser.rs
sosaku/src/types/: env.rs  var.rs
