[workspace]
resolver = "3"
members = ["sosaku", "sosaku-cli", "sosaku-py"]

[workspace.package]
authors = ["hypergonial"]
version = "0.6.2"
edition = "2024"
rust-version = "1.92"
license = "MIT"
homepage = "https://github.com/hypergonial/sosaku"
repository = "https://github.com/hypergonial/sosaku"

[workspace.dependencies]
sosaku = { version = "0.6.2", path = "sosaku" }
indexmap = "2.14.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
significant_drop_tightening = { level = "allow", priority = 1 }
module_name_repetitions = "allow"
# This is just dumb
must_use_candidate = "allow"
# When impl Trait can be used in type aliases, remove this
future_not_send = "allow"
# Applying this lint results in less easy to read code (imho), and the benefits are minimal
option_if_let_else = "allow"

# Enable incremental compilation for dev builds to improve re-compilation time.
[profile.dev]
incremental = true

# Enable LTO for release builds to reduce binary size.
[profile.release]
lto = true
